<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Androworms</string>
    <string name="facebook_app_id">612578295437725</string>
    <string name="contentDescription_logo_androworms">Logo Androworms</string>
    <string name="texte_developpeurs">Développeurs :</string>
    <string name="pas_de_donnees">Pas de données</string>
    <string name="menu_score">Scores</string>
    <string name="menu_solo">solo</string>
    <string name="menu_multi">Multi-joueurs</string>
    <string name="menu_principal">Menu principal</string>
    <string name="menu_DEBUG">DEBUG</string>
    <string name="menu_gyro">Test du gyro</string>
    <string name="menu_jeu">Jouer</string>
    <string name="menu_editeur">Editeur de carte</string>
    <string name="menu_parametres">Paramètres</string>
    <string name="joueur1">Joueur 1</string>
    <string name="joueur2">Joueur 2</string>
    <string name="informations">Informations</string>
    <string name="score_joueur_1">Joueur 1 : 0 pts</string>
    <string name="score_joueur_2">Joueur 2 : 0 pts</string>
    <string name="Armes">Armes</string>
    <string name="mode_tir">Mode TIR</string>
    <string name="menu_settings">Settings</string>
    <string name="titre_multi_joueur">Androworms - Multi-Joueurs</string>
    <string name="actualiser">Actualiser</string>
    <string name="pseudo">Pseudo</string>
    <string name="image_perso">Image perso</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="lancer">Lancer</string>
    <string name="btn_suivant">Suivant</string>
    <string name="btn_precedent">Précédent</string>
    <string name="btn_demarrer_la_partie">Démarrer la partie</string>
    <string name="tout_effacer">Tout effacer</string>

    <string-array name="liste_developpeurs">
        <item>Audrey Ernewein</item>
        <item>Damien Finck</item>
        <item>Marie-Hélène Goddet</item>
        <item>Renaud Vanhoutreve</item>
        <item>William Bon</item>
    </string-array>

    <string name="titre_choix_mode_jeu">Choix du mode de jeu</string>
    <string name="titre_config_mode_jeu">Configuration du mode de jeu</string>
    <string name="titre_choix_carte">Choix de la carte</string>
    <string name="titre_choix_team">Choix de la team</string>
    <string name="btn_jeu_solo">1 joueur contre le téléphone</string>
    <string name="btn_2_joueurs">2 joueurs sur un téléphone</string>
    <string name="btn_creation_partie">Créer une partie</string>
    <string name="btn_rejoindre_partie">Rejoindre une partie</string>
    <string name="jouer_avec_un_telephone">Jouer avec 1 téléphone</string>
    <string name="jouer_avec_plusieurs_telephones">Jouer avec plusieurs téléphones</string>
    <string name="serveur_bluetooth">Serveur Bluetooth</string>
    <string name="client_bluetooth">Client Bluetooth</string>
    <string name="version">"Version : "</string>
    <string name="touchez_l_ecran">Touchez l\'écran pour revenir au menu principale</string>
    <string name="aide">Aide</string>
    <string name="credits">Credits</string>
    <string name="test_jeu">Test du jeu</string>
    <string name="recentrer_sur_le_joueur">Recentrer sur le joueur</string>
    <string name="pause">Pause</string>
    <string name="activer_vibrations">Activer vibrations</string>
    <string name="activer_sons">Activer sons</string>
    <string name="analyse">Analyse</string>
    <string name="connexion">Connexion</string>
    <string name="selectionner_appareil_Bluetooth">Veuillez sélectionner un appareil Bluetooth</string>
    <string name="montrer_bluetooth">Montrer Bluetooth</string>
    <string name="choix_difficulte_IA">Choix de la difficulté du téléphone :</string>
    <string name="jouer_bluetooth">Jouer en Bluetooth</string>
    <string name="jouer_wifi_direct">Jouer en Wifi Direct</string>
    <string name="sauvegarder_carte">Sauvegarder la carte ?</string>
    <string name="nom_carte">Nom de la carte :</string>
    <string name="message_bluetooth_activer_bluetooth">Veuillez activer le Bluetooth pour pouvoir jouer !</string>
    <string name="message_bluetooth_serveur_attente_connexion">Attente de connexion de joueurs&#8230;</string>
    <string name="message_bluetooth_serveur_confirmation_continuer">Tous les joueurs sont arrivé ?</string>
    <string name="message_bluetooth_serveur_confirmation_quitter">Etes-vous sûr de vouloir arrêter la partie ?</string>
    <string name="message_bluetooth_client_connexion_reussi">Connexion réussi ! En attente des autres joueurs&#8230;</string>
    <string name="creer_carte">Créer une carte</string>
    <string name="editer_carte">Editer cette carte</string>
    <string name="renommer">Renommer</string>
    <string name="nouvelle_carte">Nouvelle carte</string>
    <string name="supprimer_carte">Supprimer carte</string>
    <string name="carte_selectionnee">Carte séléctionnée</string>
    <string name="systeme">Système</string>
    <string name="personnalisees">Personnalisées</string>
    <string name="afficher_retour_force">Afficher retour de force</string>
    <string name="jouer_avec_plusieurs_telephones_bluetooth">Jouer avec plusieurs telephones en Bluetooth</string>
    <string name="jouer_avec_plusieurs_telephones_wifi_direct">Jouer avec plusieurs telephones Wifi direct</string>
    <string name="dupliquer">Dupliquer</string>
    <string name="partage_apps">Partager l\'application</string>
    <string name="evaluer_play_store">Évaluer sur le Play Store</string>
    <string name="niveau_facile">Facile</string>
    <string name="niveau_moyen">Moyen</string>
    <string name="niveau_difficile">Difficile</string>
    <string name="niveau_separateur">></string>

</resources>