<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActiviteCreationPartie" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titre_choix_mode_jeu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/ciel_bleu"
                android:gravity="center"
                android:text="@string/jouer_avec_un_telephone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btn_partie_solo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_jeu_solo" />

            <Button
                android:id="@+id/btn_multi_joueur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_2_joueurs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/ciel_bleu"
                android:gravity="center"
                android:text="@string/jouer_avec_plusieurs_telephones"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btn_bluetooth_creer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/bluetooth_icon"
                android:text="@string/btn_creation_partie" />

            <Button
                android:id="@+id/btn_bluetooth_rejoindre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/bluetooth_icon"
                android:text="@string/btn_rejoindre_partie" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_suivant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btn_suivant" />

</LinearLayout>