<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.androworms.ui.BarreAction
        android:id="@+id/ba_barre_action"
        style="@style/BarreAction" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/rg_choixCarte"
                android:layout_width="150dp"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rb_choixCartesSystemes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/systeme" />

                <RadioButton
                    android:id="@+id/rb_choixCartesPerso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/personnalisees" />
            </RadioGroup>

            <ListView
                android:id="@+id/lv_choixCartesSystemes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp" >
            </ListView>

            <ListView
                android:id="@+id/lv_choixCartesPerso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tv_nomImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pas_de_donnees" />

                <Button
                    android:id="@+id/btn_renommerCarte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/renommer" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_choisir_carte"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/activer_sons" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <ImageButton
                            android:id="@+id/ib_nouvelleCarte"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/nouvelle_carte"
                            android:src="@android:drawable/ic_menu_add" />

                        <ImageButton
                            android:id="@+id/ib_editerCarte"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/editer_carte"
                            android:src="@android:drawable/ic_menu_edit" />

                        <ImageButton
                            android:id="@+id/ib_dupliquer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/dupliquer"
                            android:src="@android:drawable/ic_menu_report_image" />

                        <ImageButton
                            android:id="@+id/ib_supprimerCarte"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/supprimer_carte"
                            android:src="@android:drawable/ic_menu_delete" />

                        <Button
                            android:id="@+id/btn_precedent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_precedent" />

                        <Button
                            android:id="@+id/btn_suivant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_suivant" />
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>