<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActiviteCreationPartie" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/barre_action"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ib_return_home"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_fleche" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/titre_choix_team"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/aide"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_help" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <Button
            android:id="@+id/btn_precedent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_precedent" />

        <Button
            android:id="@+id/btn_demarrer_la_partie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_demarrer_la_partie" />
    </LinearLayout>

</LinearLayout>