<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActiviteCreationPartie" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titre_config_mode_jeu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choix_difficulte_IA" />

    <SeekBar
        android:id="@+id/sb_difficulte_IA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="4"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:progress="2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <Button
            android:id="@+id/btn_precedent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_precedent" />

        <Button
            android:id="@+id/btn_suivant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_suivant" />

    </LinearLayout>

</LinearLayout>