<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.androworms.ui.BarreAction
        android:id="@+id/ba_barre_action"
        style="@style/BarreAction" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/tg_EtatBluetoothC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/bluetooth_icon" />

        <Button
            android:id="@+id/btn_analyse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/bluetooth_analyse"
            android:text="@string/analyse" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_appareils_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <ProgressBar
            android:id="@+id/pb_bluetooth_analyse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selectionner_appareil_Bluetooth" />

        <Button
            android:id="@+id/btn_precedent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_precedent" />

        <Button
            android:id="@+id/btn_suivant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/btn_suivant" />
    </LinearLayout>

</LinearLayout>