<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.androworms.MoteurGraphique
        android:id="@+id/mg_carte"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </com.androworms.MoteurGraphique>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_score_joueur_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/score_joueur_1" />

        <TextView
            android:id="@+id/tv_score_joueur_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/score_joueur_2" />

        <TextView
            android:id="@+id/tv_mode_jeu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/pas_de_donnees" />

        <com.androworms.ui.ClavierDirectionnel
            android:id="@+id/clavier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" >
        </com.androworms.ui.ClavierDirectionnel>

        <ToggleButton
            android:id="@+id/tg_mode_tir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:textOff="@string/mode_tir"
            android:textOn="@string/mode_tir" />

        <ToggleButton
            android:id="@+id/tg_clavier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="80dp"
            android:textOff="Clavier"
            android:textOn="Clavier" />

        <SlidingDrawer
            android:id="@+id/selecteur_arme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:content="@+id/selecteur_arme_contenu"
            android:handle="@+id/selecteur_arme_bouton"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/selecteur_arme_bouton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Armes" />

            <TableLayout
                android:id="@+id/selecteur_arme_contenu"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:shrinkColumns="5"
                android:stretchColumns="5" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/Armes"
                        android:paddingRight="20dp"
                        android:src="@drawable/icone_hache" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/Armes"
                        android:paddingRight="20dp"
                        android:src="@drawable/icone_pistolet" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/Armes"
                        android:paddingRight="20dp"
                        android:src="@drawable/icone_bazooka" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/Armes"
                        android:paddingRight="20dp"
                        android:src="@drawable/icone_grenade" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/Armes"
                        android:paddingRight="20dp"
                        android:src="@drawable/icone_mine" />
                </TableRow>
            </TableLayout>
        </SlidingDrawer>

        <ImageView
            android:id="@+id/iv_recentrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tg_mode_tir"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/recentrer_sur_le_joueur"
            android:src="@drawable/ic_position" />

        <ImageView
            android:id="@+id/iv_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/pause"
            android:src="@drawable/ic_pause" />
    </RelativeLayout>

</RelativeLayout>